--- a/notes/2020-10-09-014030.md
+++ b/notes/2020-10-09-014030.md
@@ -15,3 +15,17 @@ Disagreement With Jim Keller About Moore's Law (David Patterson) | AI Podcast Cl
 **Jim Keller: Moore’s Law is Not Dead**
 
 https://www.youtube.com/watch?v=oIG9ztQw2Gc
+
+**Jim Keller: Moore's Law, Microprocessors, and First Principles**
+
+![image-20201011220534924](2020-10-09-014030.assets/image-20201011220534924.png)
+
+protecting yourself
+
+![image-20201011220552156](2020-10-09-014030.assets/image-20201011220552156.png)
+
+![image-20201011220823280](2020-10-09-014030.assets/image-20201011220823280.png)
+
+![image-20201011220623907](2020-10-09-014030.assets/image-20201011220623907.png)
+
+![image-20201011220841725](2020-10-09-014030.assets/image-20201011220841725.png)
