--- a/notes/2020-08-09-085023.md
+++ b/notes/2020-08-09-085023.md
@@ -5,3 +5,9 @@
 NIC: [Network Interface Controller](https://en.wikipedia.org/wiki/Network_interface_controller)
 
 相关: The click modular router
+
+
+
+Youtube: Enabling Fast, Dynamic Network Processing with ClickOS, Joao Martins, NEC
+
+https://www.youtube.com/watch?v=IqKDuElBplM&t=685s
