--- a/notes/2020-08-09-085057.md
+++ b/notes/2020-08-09-085057.md
@@ -1,3 +1,8 @@
 # 阅读 NetBricks: Taking the V out of NFV
 
 > 论文阅读 / Li Jialin / NUS / CS6101 / OSDI16
+
+Youtube: A New Approach to Network Functions
+
+https://www.youtube.com/watch?v=bLRboOpjf5E
+
