--- a/notes/2020-10-14-074051.md
+++ b/notes/2020-10-14-074051.md
@@ -17,3 +17,55 @@ https://www.jianshu.com/p/bcc4feffc5d6
 ![img](2020-10-14-074051.assets/featured_channel-1602681338169.jpg)
 
 https://www.youtube.com/watch?v=hh1QADop_IY
+
+## What is Ethernet?
+
+https://www.youtube.com/watch?v=HLziLmaYsO0
+
+## Network Basics
+
+Networking basics (2020) | What is a switch, router, gateway, subnet, gateway, firewall & DMZ
+
+https://www.youtube.com/watch?v=_IOZ8_cPgu8
+
+Virtualization: Bridged, NAT, Host-only - Virtual machine connection types
+
+https://www.youtube.com/watch?v=XCkKDWMYHME
+
+Bridge，适合做server
+
+![image-20201015135310134](2020-10-14-074051.assets/image-20201015135310134.png)
+
+![image-20201015135424879](2020-10-14-074051.assets/image-20201015135424879.png)
+
+NAT，适合client only
+
+![image-20201015135247829](2020-10-14-074051.assets/image-20201015135247829.png)
+
+## GNS3
+
+GNS3 Talks: Docker, Open vSwitch, SDN and OpenFlow Part 1: GNS3 Switching Part 7
+
+https://www.youtube.com/watch?v=HdntvE0Nn-c&list=PLhfrWIlLOoKO_-1ujME74HteDNnc8CmGR
+
+## NFV deployment
+
+![image-20201016015256781](2020-10-14-074051.assets/image-20201016015256781.png)
+
+https://www.youtube.com/watch?v=hZ5G7641HfA
+
+![image-20201016015508749](2020-10-14-074051.assets/image-20201016015508749.png)
+
+## NFV应用：vCPE
+
+https://en.wikipedia.org/wiki/Customer-premises_equipment
+
+客户驻地设备
+
+![image-20201016021846058](2020-10-14-074051.assets/image-20201016021846058.png)
+
+![image-20201016022035996](2020-10-14-074051.assets/image-20201016022035996.png)
+
+![image-20201016022153834](2020-10-14-074051.assets/image-20201016022153834.png)
+
+![image-20201016022239806](2020-10-14-074051.assets/image-20201016022239806.png)
