add NFV and stuff

--- a/notes/2020-08-09-085023.md
+++ b/notes/2020-08-09-085023.md
@@ -6,8 +6,28 @@ NIC: [Network Interface Controller](https://en.wikipedia.org/wiki/Network_interf
 
 相关: The click modular router
 
-
-
 Youtube: Enabling Fast, Dynamic Network Processing with ClickOS, Joao Martins, NEC
 
 https://www.youtube.com/watch?v=IqKDuElBplM&t=685s
+
+![image-20201016131132964](2020-08-09-085023.assets/image-20201016131132964.png)
+
+![image-20201016131146363](2020-08-09-085023.assets/image-20201016131146363.png)
+
+![image-20201016131221541](2020-08-09-085023.assets/image-20201016131221541.png)
+
+![image-20201016131320310](2020-08-09-085023.assets/image-20201016131320310.png)
+
+![image-20201016131419620](2020-08-09-085023.assets/image-20201016131419620.png)
+
+![image-20201016131533399](2020-08-09-085023.assets/image-20201016131533399.png)
+
+![image-20201016131638482](2020-08-09-085023.assets/image-20201016131638482.png)
+
+![image-20201016131739272](2020-08-09-085023.assets/image-20201016131739272.png)
+
+![image-20201016133642334](2020-08-09-085023.assets/image-20201016133642334.png)
+
+![image-20201016135528977](2020-08-09-085023.assets/image-20201016135528977.png)
+
+![image-20201016135651191](2020-08-09-085023.assets/image-20201016135651191.png)
