--- a/notes/2020-08-19-081845.md
+++ b/notes/2020-08-19-081845.md
@@ -7,3 +7,7 @@
 
 - WSL2 Ubuntu GUI
   - https://www.youtube.com/watch?v=IL7Jd9rjgrM
+
+- Networking not working in WSL2
+  - https://www.reddit.com/r/bashonubuntuonwindows/comments/hdkohj/networking_not_working_on_wsl2/
+  - https://github.com/microsoft/WSL/issues/4731
