--- a/notes/2020-10-14-074051.md
+++ b/notes/2020-10-14-074051.md
@@ -69,3 +69,9 @@ https://en.wikipedia.org/wiki/Customer-premises_equipment
 ![image-20201016022153834](2020-10-14-074051.assets/image-20201016022153834.png)
 
 ![image-20201016022239806](2020-10-14-074051.assets/image-20201016022239806.png)
+
+## Control Plane vs Data Plane | The Ancient Soldier
+
+https://www.youtube.com/watch?v=P9ZMugAf9lU
+
+![image-20201016102337911](2020-10-14-074051.assets/image-20201016102337911.png)
