add VCDim and How to read paper

--- a/notes/2020-10-21-125911.md
+++ b/notes/2020-10-21-125911.md
@@ -122,8 +122,9 @@ Edit and run conf/make-ip-conf.pl script to generate a full Click IP router
 
 - CheckTCPHeader https://github.com/kohler/click/wiki/CheckTCPHeader
 - IPFilter https://github.com/kohler/click/wiki/IPFilter
-  - Every IPFilter element has an equivalent corresponding [IPClassifier](https://github.com/kohler/click/wiki/IPClassifier) element and vice versa. Use the element whose syntax is more convenient for your needs.
-
+  
+- Every IPFilter element has an equivalent corresponding [IPClassifier](https://github.com/kohler/click/wiki/IPClassifier) element and vice versa. Use the element whose syntax is more convenient for your needs.
+  
 - Print https://github.com/kohler/click/wiki/Print
 - IPPrint https://github.com/kohler/click/wiki/IPPrint
 
@@ -146,3 +147,13 @@ $ sudo mn --innamespace --switch user
 Instead of using loopback, the switches will talk to the controller through a separately bridged control connection. By itself, this option is not terribly useful, but it does provide an example of how to isolate different switches.
 
 Note that this option does not (as of 11/19/12) work with Open vSwitch.
+
+## Switch有mac地址吗
+
+https://www.oreilly.com/library/view/ethernet-switches/9781449367299/ch01.html
+
+每个端口都是有的，但是switch的端口会接受所有的包而不只是和mac匹配的包。
+
+The Switches have MAC addresses for each port, and also a **base MAC address.**
+
+The base MAC address is used as part of the bridge ID in STP.
